;; # https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
[metadata]
name = cppgsh
version = file: VERSION
url = https://github.com/kirin123kirin/cppgsh
author = kirin123kirin
# author_email = #@todo
description = Single header generator for C++ libraries.
long_description = file: README.md
long_description_content_type = text/markdown

license = MIT
license_files = LICENSE

; # https://pypi.org/classifiers/
#@todo
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License

keywords = singleheader, c++, cplus, cpp, hpp

[options]
zip_safe = False
install_requires =
  setuptools>=42
  wheel
  quom

; # https://setuptools.pypa.io/en/latest/userguide/package_discovery.html
include_package_data = True
packages = find:
# package_dir =
#     =cppgsh

# [options.packages.find]
# where = cppgsh
# include = 
#   inc*
# exclude =
#   exc*

#@todo
[options.extras_require]
test =
    pytest
    pytest-cov
    psutil

[options.entry_points]
console_scripts =
    cppgsh = cppgsh.cppgsh:main

[build]
build_temp = build
build_base = build
build_platlib = build


[tool:pytest]
addopts = --capture=no -s -p no:cacheprovider
testpaths = tests


[aliases]
test=pytest


[flake8]
ignore = E302,W504,E402,F401,C901
max-line-length = 160
exclude = tests/*,test/*,.*,extern/*,build/*
max-complexity = 10

